	PR c++/22147 	* name-lookup.c (maybe_process_template_type_declaration): Don't 	treat forward declarations of classes as templates just because 	we're processing_template_decl. 	* pt.c (tsubst_decl): Clear DECL_TEMPLATE_INFO for friend 	functions.

PR c++/22147
	* g++.dg/template/friend37.C: New test.
	* g++.dg/parse/crash28.C: Adjust error markers.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104713 138bc75d-0d04-0410-961f-82ee72b054a4